Updated build numbering

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -25,16 +25,12 @@ jobs:
       - name: Build project
         run: npm run build
       
-      - name: Get package version
-        id: package-version
-        run: echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
-      
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: v${{ steps.package-version.outputs.version }}-${{ github.run_number }}
-          name: Release v${{ steps.package-version.outputs.version }}-${{ github.run_number }}
+          tag_name: v1.${{ github.run_number }}
+          name: Release v1.${{ github.run_number }}
           files: dist/index.html
           draft: false
           prerelease: false
